[project]
name = "alpine-eon"
version = "0.1.0"
description = "Argon EON control script for Alpine linux"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "smbus",
    "click",
]

[project.urls]
Repository = "https://github.com/ep69/alpine-eon"

[project.scripts]
"eon" = "alpine_eon:main"

[dependency-groups]
dev = [
    "ruff >= 0.9.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alpine_eon"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://pypi.org/legacy/"
username = "__token__"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"

